<resources>
    <string name="app_name">TheBookHuntingEagle</string>
    <string name="imgWelcome">eaglebooks image</string>
    <string name="imgBooks">books</string>
    <string name="txtName">The Book Hunting Eagle</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="txtWelcome">Welcome to The Book Hunting Eagle</string>
    <string name="inputEmail">e-mail</string>
    <string name="inputPassword">******</string>
    <string name="imgLogin">eagle books</string>
    <string name="txtUserName">Username:</string>
    <string name="txtPassword">Password:</string>
    <string name="btnEnter">Enter</string>
    <string name="txtNewName">Full Name</string>
    <string name="txtNewAddress">Address</string>
    <string name="txtNewPhone">Phone</string>
    <string name="txNewEmail">E-mail</string>
    <string name="txtNewPassword">Password</string>
    <string name="inputNewName">full name</string>
    <string name="inputNewAddress">address</string>
    <string name="inputNewPhone">(xxx) xxx xxxx</string>
    <string name="inputNewEmail">e-mail</string>
    <string name="inputNewPassword">******</string>
    <string name="btnNewRegister">Register</string>
    <string name="imgRegister">eagle register</string>
    <string name="imgUserBooks">books</string>
    <string name="imgUser">user photo</string>
    <string name="txtNameUserAccount">Charlie Brown</string>
    <string name="btnBuy">Buy</string>
    <string name="btnSellShare">Sell &amp; Share</string>
    <string name="btnManageShelf">Manage Book Shelf</string>
    <string name="btnManageAccount">Manage User Account</string>
    <string name="btnOrders">Manage Orders</string>
    <string name="btnLogOut">Logout</string>
    <string name="btnReset">Reset</string>
    <string name="btnEditPhoto">Edit Photo</string>
    <string name="btnSave">Save</string>
    <string name="imgLogout">eagle logout</string>
    <string name="imgBooksLogout">books logout</string>
    <string name="search">Search</string>
    <string name="txtBestSellers">Best Sellers</string>
    <string name="txtTrending"><![CDATA[New & Trending]]></string>
    <string name="txtResults">Search Results</string>
    <string name="btnAddCart">Add to Cart</string>
    <string name="txtSellShare"><![CDATA[Selling & Sharing Details]]></string>
    <string name="txtBookName">Title</string>
    <string name="txtDescription">Description</string>
    <string name="txtLocation">Location</string>
    <string name="txtReviews">Reviews</string>
    <string name="txtSellShareOptions">Selling and Sharing Options</string>
    <string name="txtPrice">Price</string>
    <string name="rdSell">Sell</string>
    <string name="rdShare">Share</string>
    <string name="btnAddShelf">Add to Bookshelf</string>
    <string name="imgCart">shopping cart</string>
    <string name="txtOrderDetails">Shopping Cart</string>
    <string name="txtBookName2">Book</string>
    <string name="txtPrice2">Price</string>
    <string name="txtTaxes">Taxes</string>
    <string name="txtLocation2">Location</string>
    <string name="txtLocation3">Location</string>
    <string name="txtSellersInfo">Seller\'s information</string>
    <string name="txtShipping">Shipping Options</string>
    <string name="rdDelivery">Delivery +$ 10.00</string>
    <string name="rdPickup">Pick up +$ 0.00</string>
    <string name="btnPlaceOrder">Place Order</string>
    <string name="imgManageOrders">manage orders</string>
    <string name="txtManageOrders">Manage my Orders</string>
    <string name="txtRow1Column1">Order#</string>
    <string name="txtRow1Column2">Book</string>
    <string name="txtRow1Column3">Date</string>
    <string name="txtRow1Column4">Status</string>
    <string name="txtRow2Column1">"001"</string>
    <string name="txtRow2Column2">"Harry Porter"</string>
    <string name="txtRow2Column3">"02.29.24"</string>
    <string name="txtRow2Column4">"Delivered"</string>
    <string name="txtEditOrders">Edit Orders</string>
    <string name="txtShipping2">Shipping Options</string>
    <string name="ckboxOrder">001</string>
    <string name="btnCancel">Cancel Order</string>
    <string name="btnEditOrder">Edit Order</string>
    <string name="btnAddfee">Pay Additional Fee</string>
    <string name="btnSaveChanges">Save</string>
    <string name="txtBookShelf">My Bookshelf</string>
    <string name="txttab2Row1Column1">Book</string>
    <string name="txttab2Row1Column2">Type</string>
    <string name="txttab2Row1Column3">Status</string>
    <string name="txttab2Row1Column4">Ship Options</string>
    <string name="ckboxBook">Hamlet</string>
    <string name="txttab2Row2Column2">Sell</string>
    <string name="txttab2Row2Column3">sold</string>
    <string name="txttab2Row2Column4">Pick up</string>
    <string name="btnEditShelf">Edit Shelf</string>
    <string name="txtPrice3">Price:</string>
    <string name="inputPrice">$ 0.00</string>
    <string name="txtStatus2">Status:</string>
    <string name="rdShared">shared</string>
    <string name="rdSold">sold</string>
    <string name="rdAvailable">available</string>
    <string name="txtShipping3">Shipping Options:</string>
    <string name="rdPickup2">Pick up</string>
    <string name="rdDelivery2">Delivery</string>
    <string name="imgShelf">Bookshelf</string>
    <string name="txtNewCity">City</string>
    <string name="inputNewCity">city</string>
    <string name="imgSellShare">book selling</string>
    <string name="txtSplash">The Book</string>
    <string name="txtSplash2">Hunting Eagle</string>
    <string name="txtLogout">You\'re logged out!\nSee You Next Time!</string>
    <string name="imgBooks3">books</string>
    <string name="txtBookAuthor">Author</string>
    <string name="txtBookEdition">Edition</string>
    <string name="txtBookDiscount">Discount</string>
    <string name="txtBookCondition">Condition</string>
    <string name="txtBookSearch">Find a book nearby…</string>
    <string name="inputBookNameHint">Book Name</string>
    <string name="inputBookAuthorHint">Book Author</string>
    <string name="inputBookEditionHint">Book Edition</string>
    <string name="inputPriceSell">Price</string>
    <string name="inputBookPriceHint">Book Price</string>
    <string name="inputBookDiscHint">Book Disc.</string>
    <string name="rdBookCondNew">New</string>
    <string name="rdBookCondPoor">Poor</string>
    <string name="rdBookCondGood">Good</string>
    <string name="txtShippingOrder">Order Details</string>
    <string name="imgShipping">ship</string>
    <string name="btnCreateOrder">Confirm Placement</string>
    <string name="txtAddDelivery">Shipping Option</string>
    <string name="txtItem1">Item 1</string>
    <string name="txtTitleItem1">Title Item1</string>
    <string name="txtItem2">Item 2\n</string>
    <string name="txtTitleItem2">Title item 2</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtSubtotalValue">Price before shipping fees</string>
    <string name="txtTotalPrice">Total</string>
    <string name="txtTotalValue">Total price after discount + delivery fee</string>
    <string name="imgCurrentUser">User\'s avatar</string>
    <string name="txtNameCurrentUser">Current User</string>
    <string name="txtOrderDetailAuthor">Author</string>
    <string name="txtOrderDetailEdition">Edition</string>
    <string name="txtOrderDetailCondition">Condition</string>
    <string name="txtOrderDetailOrigPrice">Original Price</string>
    <string name="txtOrderDiscount">Discount</string>
    <string name="txtOrderSubtotal">Subtotal</string>
    <string name="btnEditOrderConcludeOrder">Conclude Order</string>
    <string name="btnEditOrderCancelOrder">Cancel Order</string>
    <string name="btnEditOrderUpdateShip">Update Shipping</string>
    <string name="txtEditOrderBookTileLabel">Book:</string>
    <string name="txtEditOrderBookPriceLabel">Price:</string>
    <string name="btnYourOrders">Your Orders</string>
    <string name="txtOrderHistory">Orders History</string>
    <string name="imgOrderHistory">history icon</string>
    <string name="imgUserOrder">img user</string>
    <string name="txtNameUserOrders">Charlie Brown</string>
    <string name="txtManagOrderDetails">Order Details</string>
    <string name="txtManageuserAccount">Manage Account</string>
    <string name="imgUserEdit2">charlie</string>
    <string name="txtYourOrders">Your Orders</string>
</resources>