<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login5"
    tools:context=".ShippingOptions">

    <TextView
        android:id="@+id/txtNameCurrentUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/txtNameCurrentUser"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/txtItem2"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSubtotal"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/txtSubtotal"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/txtTotalPrice"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtShipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/txtShipping"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <RadioGroup
        android:id="@+id/rdGroup4"
        android:layout_width="364dp"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989">

        <RadioButton
            android:id="@+id/rdDelivery2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="serif"
            android:text="@string/rdDelivery"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="551dp" />

        <RadioButton
            android:id="@+id/rdPickup2"
            android:layout_width="172dp"
            android:layout_height="45dp"
            android:fontFamily="serif"
            android:text="@string/rdPickup"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,VisualLintBounds,TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtShippingOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtShippingOrder"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="98dp"
        android:contentDescription="@string/imgShipping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        app:srcCompat="@drawable/shipping" />

    <Button
        android:id="@+id/btnAddDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/btnAddDelivery"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <TextView
        android:id="@+id/txtAddDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAddDelivery"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/txtItem1"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtTitleItem1"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:text="@string/txtTitleItem1"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtTitleItem2"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:text="@string/txtTitleItem2"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSubtotalValue"
        android:layout_width="189dp"
        android:layout_height="26dp"
        android:text="@string/txtSubtotalValue"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtTotalValue"
        android:layout_width="316dp"
        android:layout_height="33dp"
        android:text="@string/txtTotalValue"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgCurrentUser"
        android:layout_width="115dp"
        android:layout_height="120dp"
        android:contentDescription="@string/imgCurrentUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>